# jsylvan

./: .gitignore  README.md  jar.xml  pom.xml  sylvan.properties
java/: pom.xml
java/src/main/java/jsylvan/: JSylvan.java  JSylvanDemo.java  MCFile.java
native/: pom.xml
native/src/: jsylvan.c  mc_help.c
src/main/c/sylvan-java/: CMakeLists.txt  build-sylvan.sh
src/main/c/sylvan-java/src/: jsylvan.c  mc_help.c
src/main/java/jsylvan/: JSylvan.java  JSylvanDemo.java  MCFile.java  NativeUtils.java
